<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context="com.example.sergey.yalantisyalantisinternshiptask1.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="@dimen/top_bottom_padding_linearlayout_activity"
            android:paddingLeft="@dimen/left_right_padding_linearlayout_activity"
            android:paddingRight="@dimen/left_right_padding_linearlayout_activity"
            android:paddingTop="@dimen/top_bottom_padding_linearlayout_activity">

            <TextView
                android:id="@+id/number_task_text"
                style="@style/Content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_number_task"
                android:gravity="center_horizontal"
                android:text="@string/decree" />

            <TextView
                android:id="@+id/status_task"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/status_task_background"
                android:gravity="center"
                android:paddingBottom="@dimen/top_bottom_padding_status_task_activity"
                android:paddingLeft="@dimen/left_right_padding_status_task_activity"
                android:paddingRight="@dimen/left_right_padding_status_task_activity"
                android:paddingTop="@dimen/top_bottom_padding_status_task_activity"
                android:text="@string/status_task_text"
                android:textColor="@color/colorApp"
                android:textSize="@dimen/text_size" />

            <View
                android:id="@+id/line_1"
                style="@style/HorizontalLine"
                android:layout_marginBottom="@dimen/vertical_interval"
                android:layout_marginTop="@dimen/vertical_interval" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_item_linearlayout"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/create_date_info"
                    style="@style/Capture"
                    android:gravity="center_vertical|start"
                    android:text="@string/created" />

                <TextView
                    android:id="@+id/create_date"
                    style="@style/Content"
                    android:gravity="center_vertical|end" />

            </LinearLayout>

            <View
                android:id="@+id/line_2"
                style="@style/HorizontalLine"
                android:layout_marginBottom="@dimen/vertical_interval" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_item_linearlayout"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/registrate_date_info"
                    style="@style/Capture"
                    android:gravity="center_vertical|start"
                    android:text="@string/registered" />

                <TextView
                    android:id="@+id/registrate_date"
                    style="@style/Content"
                    android:gravity="center_vertical|end" />

            </LinearLayout>

            <View
                android:id="@+id/line_3"
                style="@style/HorizontalLine"
                android:layout_marginBottom="@dimen/vertical_interval" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_item_linearlayout"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/solved_date_info"
                    style="@style/Capture"
                    android:gravity="center_vertical|start"
                    android:text="@string/due_date" />

                <TextView
                    android:id="@+id/solved_date"
                    style="@style/Content"
                    android:gravity="center_vertical|end"/>

            </LinearLayout>

            <View
                android:id="@+id/line_4"
                style="@style/HorizontalLine"
                android:layout_marginBottom="@dimen/vertical_interval" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_item_linearlayout"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/responsible_text"
                    style="@style/Capture"
                    android:gravity="center_vertical|start"
                    android:text="@string/responsible" />

                <TextView
                    android:id="@+id/responsible"
                    style="@style/Content"
                    android:gravity="center_vertical|end"
                    android:text="@string/responsible_info" />

            </LinearLayout>

            <View
                android:id="@+id/line_5"
                style="@style/HorizontalLine"
                android:layout_marginBottom="@dimen/vertical_interval" />

            <TextView
                android:id="@+id/description"
                style="@style/Content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler_view_picture"
                android:layout_width="match_parent"
                android:layout_height="@dimen/main_activity_recycler_height" />

        </LinearLayout>
    </ScrollView>


</LinearLayout>
